# pdsh

./: .gitignore  .mergify.yml  .travis.yml  AUTHORS  ChangeLog  DISCLAIMER  DISCLAIMER.LLNS  DISCLAIMER.UC  HostListExpressions.md  INSTALL  META  Make-rpm.mk  Make-test.mk  Makefile  Makefile.am  Makefile.in  MiscModules.md  NEWS  ProjectHome.md  RCMDModules.md  README  README.AIX  README.KRB4  README.QsNet  README.modules  TODO  UsingPDSH.md  VERSION  aclocal.m4  autogen.sh  base64.c  base64.h  bootstrap  conf.h  conf.h.in  config.h.in  configure  configure.ac  dsh.c  dsh.h  (+54 more)
.github/workflows/: codeql.yml  main.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
auxdir/: ac_connect_timeout.m4  ac_elan.m4  ac_fanout.m4  ac_genders.m4  ac_gpl_licensed.m4  ac_krb4.m4  ac_machines.m4  ac_mqsh.m4  ac_mqshell.m4  ac_mrsh.m4  ac_nodeattr.m4  ac_nodeupdown.m4  ac_pam.m4  ac_qshell.m4  ac_readline.m4  ac_rmsquery.m4  ac_static_modules.m4
auxdir/CVS/: Entries  Repository  Root
config/: Make-inc.mk  Make-rpm.mk  Make-test.mk  Makefile.am  Makefile.in  ac_connect_timeout.m4  ac_debug.m4  ac_dmalloc.m4  ac_dshgroup.m4  ac_elan.m4  ac_exec.m4  ac_fanout.m4  ac_genders.m4  ac_krb4.m4  ac_machines.m4  ac_meta.m4  ac_moabrsv.m4  ac_mqshell.m4  ac_mrsh.m4  ac_msghdr_accrights.m4  ac_netgroup.m4  ac_nodeattr.m4  ac_nodeupdown.m4  ac_pam.m4  ac_pollselect.m4  ac_qshell.m4  ac_rcmd_rank_list.m4  ac_readline.m4  ac_rmsquery.m4  ac_rsh.m4  ac_sdr.m4  ac_slurm.m4  ac_ssh.m4  ac_static_modules.m4  ac_torque.m4  ac_xcpu.m4  acx_pthread.m4  ax_code_coverage.m4  libtool.m4
doc/: Makefile.am  Makefile.in  dshbak.1  pdcp.1.in  pdsh.1.in
etc/: Makefile.am  Makefile.in  mqshell.xinetd  qshell.xinetd
modules/: Makefile.am  genders.c  k4cmd.c  machines.c  mcmd.c  mqcmd.c  nodeattr.c  nodeupdown.c  qcmd.c  rms.c  sdr.c  sshcmd.c  xrcmd.c
scripts/: Makefile.am  Makefile.in  dshbak  travis-ci-deps.sh
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  err.c  err.h  fd.c  hostlist.c  hostlist.h  list.c  list.h  macros.h  pipecmd.c  pipecmd.h  split.c  split.h  xmalloc.c  xmalloc.h  xpoll.c  xpoll.h  xstring.c  xstring.h
src/modules/: Makefile.am  Makefile.in  dshgroup.c  execcmd.c  genders.c  k4cmd.c  machines.c  mcmd.c  moabrsv.c  mqcmd.c  netgroup.c  nodeattr.c  nodeupdown.c  qcmd.c  rms.c  sdr.c  slurm.c  sshcmd.c  static_modules.h  torque.c  xcpucmd.c  xrcmd.c
src/pdsh/: Makefile.am  Makefile.in  cbuf.c  dsh.c  dsh.h  ltdl.c  main.c  mod.c  mod.h  mod_rcmd.c  mod_rcmd.h  opt.c  opt.h  pcp_client.c  pcp_client.h  pcp_server.c  pcp_server.h  privsep.c  privsep.h  rcmd.c  rcmd.h  testcase.c  wcoll.c  wcoll.h  xpopen.c  xpopen.h
src/qsnet/: Makefile.am  Makefile.in  elanhosts.c  elanhosts.h  mqshd.c  qshd.c  qshell.c  qshell.h  qswutil.c  qswutil.h
tests/: Makefile.am  Makefile.in  README  aggregate-results.sh  runtests.sh  t0001-basic.sh  t0002-internal.sh  t0003-wcoll.sh  t0004-module-loading.sh  t0005-rcmd_type-and-user.sh  t0006-pdcp.sh  t1000-dshbak.sh  t1001-genders.sh  t1002-dshgroup.sh  t1003-slurm.sh  t2000-exec.sh  t2001-ssh.sh  t2002-mrsh.sh  t5000-dshbak.sh  t6036-long-output-lines.sh  t6114-no-newline-corruption.sh  t7000-moabrsv.sh  test-lib.sh
tests/test-modules/: Makefile.am  Makefile.in  a.c  b.c  pcptest.c
testsuite/: Makefile.am  Makefile.in
testsuite/pdsh.test/: Makefile.am  Makefile.in  dshbak.exp  first-try.exp  pdsh.exp
