##****************************************************************************
## $Id$
##****************************************************************************
## Process this file with automake to produce Makefile.in.
##****************************************************************************

EXTRA_DIST = \
    Make-inc.mk \
    ac_connect_timeout.m4 \
    ac_debug.m4 \
    ac_dmalloc.m4 \
    ac_fanout.m4 \
    ac_genders.m4 \
    ac_gpl_licensed.m4 \
    ac_krb4.m4 \
    ac_machines.m4 \
    ac_mrsh.m4 \
    ac_xcpu.m4 \
    ac_nodeupdown.m4 \
    ac_pollselect.m4 \
    ac_readline.m4 \
    ac_socklen_t.m4 \
    ac_ssh.m4 \
    ac_exec.m4 \
    ac_static_modules.m4 \
    acx_pthread.m4 \
    ac_rsh.m4 \
    ac_slurm.m4 \
    ac_dshgroup.m4 \
    ac_dshgroup.m4 \
    ac_msghdr_accrights.m4 \
    libtool.m4 \
    tap-driver.sh
