##****************************************************************************
## $Id$
##****************************************************************************
## Process this file with automake to produce Makefile.in.
##****************************************************************************

man_MANS =        pdsh.1 pdcp.1 dshbak.1
EXTRA_DIST =      dshbak.1
