##****************************************************************************
## $Id$
##****************************************************************************
## Process this file with automake to produce Makefile.in.
##****************************************************************************

EXTRA_DIST = mqshell.xinetd qshell.xinetd
