##****************************************************************************
## $Id$
##****************************************************************************
## Process this file with automake to produce Makefile.in.
##****************************************************************************

bin_SCRIPTS = dshbak
EXTRA_DIST =  dshbak
