##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include $(top_srcdir)/config/Make-inc.mk

INCLUDES = \
    -I $(top_srcdir)

noinst_LTLIBRARIES = \
    libcommon.la

libcommon_la_SOURCES = \
    macros.h \
    err.c \
    err.h \
    fd.c \
    fd.h \
    hostlist.c \
    hostlist.h \
    list.c \
    list.h \
    xmalloc.c \
    xmalloc.h \
    xpoll.c \
    xpoll.h \
    xstring.c \
    xstring.h
